@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h,v 1.118 2001/07/05 04:44:53 db Exp $
+ * $Id: config.h,v 1.119 2001/07/05 22:16:54 greg Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -406,12 +406,23 @@
 /* CRYPT_LINKS - Enable encrypted links between one server and another by
  * use of a defineable password prefix. Requires the other defines below.
  */
+/* Warning: As of 8/7/2001 this is not allowed on EFnet, and it was
+ * implemented due to confusion relating to what was approved by the CFV
+ * -A1kmm */
 #undef CRYPT_LINKS
+
+#ifndef CRYPTLINKS
+/* A less CPU intensive alternative to cryptlinks... */
+#define USE_KSERVER
+#endif
 
 /* CRYPT_LINKS_CNPREFIX - This is the prefix that will go in a c/n password
  * field to indicate this will be an encrypted link.
  */
 #define CRYPT_LINKS_CNPREFIX '@'
+/* KSERVER_CNPREFIX - The same but for c/n password field for KSERVERs.
+ */
+#define KSERVER_CNPREFIX '%'
 
 /* CRYPT_LINKS_CIPHERPREFIX - This is the character that delimits the public
  * key filename for a server and the prefered crypt preference.
