@@ -1,3 +1,8 @@
+*** 20010708_4 by db
+- reverted KSERVER changes. NOT DISCUSSED, NOT APPROVED
+
+
+
 *** 20010708_3 by a1kmm
 - The first phase of adding KSERVER.
 
